# image-processing-workshop

./: NOTICE  README.md  pyproject.toml  requirements.txt
code/: 01-introduction.ipynb  02-io.ipynb  03-common-types.ipynb  04-interpolation.ipynb  05-geometric-transformation.ipynb  06-intensity-transformation.ipynb  07-histogram-processing.ipynb  08-spatial-filtering.ipynb  09-frequency-filtering.ipynb  10-multi-resolution-analysis.ipynb  11-image-compression.ipynb  12-morphological-processing.ipynb
code/base/: 01-complex-numbers.ipynb  02-linalg-basics.ipynb  03-convolution.ipynb  04-transforms.ipynb
code/projects/dip3e/: chapter-02.ipynb
code/utils/: color-space.ipynb  compression.ipynb  padding.ipynb  quality-assessment.ipynb  tone-filters.ipynb
codecs/: README.md
