[project]
name = "media-processing-workshop"
version = "0.1.0"
description = "A comprehensive resource to explore media processing, from fundamental concepts to advanced techniques"
authors = [
    { name = "Amirhossein Heydari", email = "amirhosseinheydari78@gmail.com" },
]
maintainers = [
    { name = "Amirhossein Heydari", email = "amirhosseinheydari78@gmail.com" },
]
keywords = [
    "DIP",
    "digital image processing",
    "image processing",
    "media processing",
]
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE", "assets/images/original/LICENSE"]
requires-python = ">=3.14.5"
dependencies = [
    "imagecodecs>=2026.5.10,<2027.0.0",
    "ipykernel>=7.2.0,<8.0.0",
    "ipympl>=0.10.0,<1.0.0",
    "ipywidgets>=8.1.8,<9.0.0",
    "matplotlib>=3.10.9,<4.0.0",
    "numpy>=2.4.6,<3.0.0",
    "opencv-contrib-python>=4.13.0.92,<5.0.0",
    "pillow>=12.2.0,<13.0.0",
    "pydicom>=3.0.2,<4.0.0",
    "PyWavelets>=1.9.0,<2.0.0",
    "scikit-image>=0.26.0,<1.0.0",
    "scipy>=1.17.1,<2.0.0",
]

[project.urls]
Repository = "https://github.com/mr-pylin/media-processing-workshop"
MyHomepage = "https://mr-pylin.github.io"

[tool.black]
line-length = 120
